modified the container name to openelis-postgresql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ openelis-tomcat:
     - "8080:8080"
   container_name: openelis-tomcat
   links:
-    - openmrs-refapp-mysql
+    - openelis-postgresql
 openelis-postgresql:
   build: postgresql
   ports:
